--- a/app/src/main/res/layout/activity_display_that_patient.xml
+++ b/app/src/main/res/layout/activity_display_that_patient.xml
@@ -25,6 +25,7 @@
 	    
 	
 	    <Button
+            android:alpha="0.9"
 	        android:id="@+id/button1"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
