--- a/app/src/main/res/layout/activity_find_patient_physician.xml
+++ b/app/src/main/res/layout/activity_find_patient_physician.xml
@@ -23,6 +23,7 @@
         android:hint="@string/hcn" />
 
     <Button
+        android:alpha="0.9"
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
