--- a/app/src/main/res/layout/activity_log_on.xml
+++ b/app/src/main/res/layout/activity_log_on.xml
@@ -29,6 +29,7 @@
     </EditText>
 
     <Button
+        android:alpha="0.9"
         android:id="@+id/button1"
         android:layout_width="126dp"
         android:layout_height="wrap_content"
