--- a/app/src/main/res/layout/activity_physician_options.xml
+++ b/app/src/main/res/layout/activity_physician_options.xml
@@ -19,19 +19,21 @@
         android:text="@string/options" />
     
         <Button
-        android:id="@+id/button1"
-        android:layout_width="126dp"
-        android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="20dp"
-        android:padding="10dp"
-    	android:textColor="#ffffff"
-        android:onClick="displayPatient"
-        android:background="@drawable/mybutton"
-        android:text="@string/display_patient" />
+			android:alpha="0.9"
+			android:id="@+id/button1"
+			android:layout_width="126dp"
+			android:layout_height="wrap_content"
+			android:textStyle="bold"
+			android:layout_marginBottom="20dp"
+			android:layout_marginTop="20dp"
+			android:padding="10dp"
+			android:textColor="#ffffff"
+			android:onClick="displayPatient"
+			android:background="@drawable/mybutton"
+			android:text="@string/display_patient" />
 
         <Button
+			android:alpha="0.9"
             android:id="@+id/button2"
             android:layout_width="126dp"
             android:layout_height="wrap_content"
@@ -45,16 +47,17 @@
             android:text="@string/record_prescription" />
       
         <Button
-        android:id="@+id/button4"
-        android:layout_width="126dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:text="@string/back"
-        android:textStyle="bold"
-        android:padding="10dp"
-    	android:textColor="#ffffff"
-    	android:background="@drawable/mybutton"
-        android:onClick= "goHome" />
+			android:alpha="0.9"
+			android:id="@+id/button4"
+			android:layout_width="126dp"
+			android:layout_height="wrap_content"
+			android:layout_marginBottom="20dp"
+			android:text="@string/back"
+			android:textStyle="bold"
+			android:padding="10dp"
+			android:textColor="#ffffff"
+			android:background="@drawable/mybutton"
+			android:onClick= "goHome" />
         
   	
 
