--- a/app/src/main/res/layout/activity_urgency_display.xml
+++ b/app/src/main/res/layout/activity_urgency_display.xml
@@ -2,8 +2,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
-	android:layout_height="wrap_content"
-	>
+	android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,16 +22,17 @@
         android:text="@string/hello_world" />
 
 	<Button
-	        android:id="@+id/button1"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_marginTop="20dp"
-	        android:text="@string/back"
-	        android:textStyle="bold"
-        	android:padding="10dp"
-    		android:textColor="#ffffff"
-    		android:background="@drawable/mybutton"
-	        android:onClick="goBack" />
+        android:alpha="0.9"
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="@string/back"
+        android:textStyle="bold"
+        android:padding="10dp"
+        android:textColor="#ffffff"
+        android:background="@drawable/mybutton"
+        android:onClick="goBack" />
 	
 	</LinearLayout>
 </ScrollView>
