--- a/app/src/main/res/layout/activity_display_that_patient.xml
+++ b/app/src/main/res/layout/activity_display_that_patient.xml
@@ -2,8 +2,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
-	android:layout_height="wrap_content"
-	>
+	android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -34,7 +33,7 @@
 	        android:textStyle="bold"
         	android:padding="10dp"
     		android:textColor="#ffffff"
-    		android:background="@drawable/mybutton"
+    		android:background="@drawable/my_button"
 	        android:onClick="goBack" />
 	
 	</LinearLayout>
