--- a/app/src/main/res/layout/activity_find_patient.xml
+++ b/app/src/main/res/layout/activity_find_patient.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/background"
+    android:background="@drawable/emergency"
     tools:context=".FindPatientActivity" >
 
     <TextView
@@ -26,7 +26,7 @@
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/mybutton"
+        android:background="@drawable/my_button"
         android:alpha="0.9"
         android:onClick="getThatPatient"
         android:text="@string/retrieve"
