--- a/app/src/main/res/layout/activity_find_patient_physician.xml
+++ b/app/src/main/res/layout/activity_find_patient_physician.xml
@@ -31,7 +31,7 @@
         android:textStyle="bold"
         android:padding="10dp"
     	android:textColor="#ffffff"
-    	android:background="@drawable/mybutton"
+    	android:background="@drawable/my_button"
         android:onClick= "getThatPatient" />
     
     
