--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -21,7 +21,7 @@
         android:textStyle="bold"
         android:padding="10dp"
     	android:textColor="#ffffff"
-    	android:background="@drawable/mybutton"
+    	android:background="@drawable/my_button"
         android:text="@string/new_patient" />
 
     <Button
@@ -35,7 +35,7 @@
         android:textStyle="bold"
         android:padding="10dp"
     	android:textColor="#ffffff"
-    	android:background="@drawable/mybutton"
+    	android:background="@drawable/my_button"
         android:text="@string/load_patient" />
     
 	<Button
@@ -49,7 +49,7 @@
 	    android:textStyle="bold"
         android:padding="10dp"
     	android:textColor="#ffffff"
-    	android:background="@drawable/mybutton"
+    	android:background="@drawable/my_button"
 	    android:text="@string/urgency_list" />
 
 </LinearLayout>
