--- a/app/src/main/res/layout/activity_log_on.xml
+++ b/app/src/main/res/layout/activity_log_on.xml
@@ -38,7 +38,7 @@
         android:textStyle="bold"
         android:padding="10dp"
     	android:textColor="#ffffff"
-    	android:background="@drawable/mybutton"
+    	android:background="@drawable/my_button"
         android:text="@string/submit" />
 
 
