--- a/app/src/main/res/layout/activity_nurse_options.xml
+++ b/app/src/main/res/layout/activity_nurse_options.xml
@@ -28,7 +28,7 @@
         android:padding="10dp"
     	android:textColor="#000000"
     	android:alpha="0.9"
-    	android:background="@drawable/mybutton"
+    	android:background="@drawable/my_button"
         android:text="@string/display_patient" />
 
         <Button
@@ -41,7 +41,7 @@
        	android:padding="10dp"
     	android:textColor="#000000"
     	android:alpha="0.9"
-    	android:background="@drawable/mybutton"
+    	android:background="@drawable/my_button"
         android:text="@string/record_vitals" />
 
         
@@ -55,7 +55,7 @@
         android:padding="10dp"
     	android:textColor="#000000"
     	android:alpha="0.9"
-    	android:background="@drawable/mybutton"
+    	android:background="@drawable/my_button"
         android:onClick= "setAsSeen" />
 	<Button
         android:id="@+id/button4"
@@ -67,7 +67,7 @@
         android:padding="10dp"
     	android:textColor="#000000"
     	android:alpha="0.9"
-    	android:background="@drawable/mybutton"
+    	android:background="@drawable/my_button"
         android:onClick= "goHome" />
 
 </LinearLayout>
