--- a/app/src/main/res/layout/activity_prescribe_medication.xml
+++ b/app/src/main/res/layout/activity_prescribe_medication.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/background"
+    android:background="@drawable/stethoscope"
     tools:context=".PrescribeMedicationActivity" >
 
     <EditText
@@ -27,7 +27,7 @@
 
     <Button
         android:alpha="0.9"
-        android:id="@+id/button_record_precription"
+        android:id="@+id/button_record_prescription"
         android:layout_width="206dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="82dp"
@@ -35,7 +35,7 @@
         android:textStyle="bold"
         android:padding="10dp"
     	android:textColor="#ffffff"
-    	android:background="@drawable/mybutton"
+    	android:background="@drawable/my_button"
         android:text="@string/record_prescription" />
 
 </LinearLayout>
