removed hard-coded strings in activity files

--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -15,6 +15,7 @@
         android:id="@+id/button1"
         android:layout_width="136dp"
         android:layout_height="wrap_content"
+		android:layout_marginStart="17dp"
         android:layout_marginLeft="17dp"
         android:layout_marginTop="28dp"
         android:onClick="newPatient"
@@ -29,6 +30,7 @@
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+		android:layout_marginStart="17dp"
         android:layout_marginLeft="17dp"
         android:layout_marginTop="32dp"
         android:onClick="findPatient"
@@ -43,7 +45,8 @@
 	    android:id="@+id/button3"
 	    android:layout_width="266dp"
 	    android:layout_height="wrap_content"
-	    android:layout_marginLeft="17dp"
+	    android:layout_marginStart="17dp"
+		android:layout_marginLeft="17dp"
 	    android:layout_marginTop="32dp"
 	    android:onClick="displayByUrgency"
 	    android:textStyle="bold"
