--- a/app/src/main/res/layout/activity_log_on.xml
+++ b/app/src/main/res/layout/activity_log_on.xml
@@ -23,10 +23,7 @@
         android:layout_marginTop="53dp"
         android:ems="10"
         android:hint="@string/password"
-        android:inputType="textPassword" >
-
-        
-    </EditText>
+        android:inputType="textPassword" />
 
     <Button
         android:alpha="0.9"
@@ -40,6 +37,5 @@
     	android:textColor="#ffffff"
     	android:background="@drawable/my_button"
         android:text="@string/submit" />
-
 
 </LinearLayout>
